--- a/Progra620241_Assets_CamiloRodriguez/appsettings.json
+++ b/Progra620241_Assets_CamiloRodriguez/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "P6ApiKey": "KmiloRP6ApiK123454321abc",
+  "ConnectionStrings": {
+    "CNNSTR": "SERVER=.; DATABASE=Progra620241; INTEGRATED SECURITY=FALSE; TrustServerCertificate=True; Trusted_Connection=true; encrypt=false; User Id=Progra6; Password="
+  }
 }
